k8s/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocdproject-backend-deployment
  namespace: chaicafe
  labels:
    app: chaicafe-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chaicafe-backend
  template:
    metadata:
      labels:
        app: chaicafe-backend
    spec:
      containers:
      - name: chaicafe-backend
        image: rakeshkumar2398/backend:latest
        ports:
        - containerPort: 8080
