k8s/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: argocdproject-postgres-deployment
  namespace: chaicafe

  labels:
    app: chaicafe-postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: chaicafe-postgres

  template:
    metadata:
      labels:
        app: chaicafe-postgres

    spec:
      containers:
      - name: chaicafe-postgres
        image: postgres:15

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-init-script
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql

      volumes:
      - name: postgres-init-script
        configMap:
          name: postgres-init-config
