k8s/backend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: chaicafe
spec:
  selector: 
    app: chaicafe-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
