k8s/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chaicafe
spec:
  selector:
    app: chaicafe-frontend
  ports:  
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
