k8s/postgres-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: chaicafe
spec:
  selector:
    app: chaicafe-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
