k8s/ingress.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.1/deploy/static/provider/aws/deploy.yaml
# kubectl get pods -n ingress-nginx
# kubectl get svc -n ingress-nginx
# kubectl apply -f ingress.yaml
# kubectl get ingress -n chaicafe
# kubectl get svc -n ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chaicafe-ingress
  namespace: chaicafe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:

  - host: chaicafe.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

  - host: www.chaicafe.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
              
  - host: api.chaicafe.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
